# velum-network

./: .gitignore  README.md
app/backend/: README.md  env.example  package.json  tsconfig.json
app/backend/circuits/: README.md  transfer.json
app/backend/prisma/: schema.prisma
app/backend/src/: index.ts
app/backend/src/lib/: agentRegistration.ts  amounts.ts  authUser.ts  confidentialTransfer.ts  contracts.ts  sdkKeys.ts
app/backend/src/prover/: paymentQueue.ts  proverWorker.ts  types.ts
app/backend/src/routes/: agents.ts  auth.ts  config.ts  demo.ts  marketplace.ts  sdk.ts  tokens.ts  transaction.ts
app/frontend/: .env.example  README.md  middleware.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/frontend/app/: globals.css  layout.tsx  page.tsx  polyfills.ts
app/frontend/lib/: utils.ts
contracts/: README.md
contracts/confidential_erc20/: Cargo.toml  README.md  abi.json  deploy.sh
contracts/confidential_erc20/src/: lib.rs
contracts/verifier/: deployments.json  hardhat.config.js  package.json
contracts/verifier/contracts/: TransferVerifier.sol
contracts/verifier/scripts/: deploy-erc8004.js  deploy-withdraw-transfer.js
sdk/: README.md  package.json  tsconfig.json
sdk/examples/: buy-research.ts  express-snippet.ts
sdk/src/: index.ts
wallet_proof/: README.md  package.json
wallet_proof/contracts/: DepositVerifier.sol  TransferVerifier.sol  WithdrawVerifier.sol
wallet_proof/deposit/: Nargo.toml
wallet_proof/deposit/src/: main.nr
wallet_proof/transfer/src/: main.nr
wallet_proof/withdraw/src/: main.nr
(+89 files in other folders)
