[package]
name = "confidential-erc20"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "confidential", "elgamal"]
description = "Confidential ERC-20 with encrypted balances using ElGamal encryption"

[dependencies]
alloy-primitives = "=1.6.0"
alloy-sol-types = "=1.6.0"
stylus-sdk = { version = "0.10.7", default-features = false }

[dev-dependencies]
stylus-sdk = { version = "0.10.7", features = ["stylus-test"] }
tokio = { version = "1.52.3", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
dotenv = "0.15.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]

[[bin]]
name = "confidential-erc20"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = 3
